--- a/configs/tuning_configs.json
+++ b/configs/tuning_configs.json
@@ -1,7 +1,7 @@
 {    
-    "xgboost": {
+    "booster": {
         "full_info": {
-                "small": {"x_0": 1000, "eta": 2, "r_0": 0.1},
+                "small": {"x_0": 1000, "eta": 2, "r_0": 0.1}, 
                 "medium": {"x_0": 100, "eta": 2, "r_0": 0.1},
                 "large": {"x_0": 16, "eta": 2, "r_0": 0.2}
             },
@@ -12,7 +12,7 @@
         }
     },
 
-    "GINe": {
+    "graph": {
         "full_info": {
             "small": {"x_0": 10},
             "medium": {"x_0": 10},
